Fix header font size cuz it was irritatingly large on mobile displays

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,6 +20,7 @@
 .App-title {
   padding: 10px 30px;
   display: inline-block;
+  font-size: 3em;
 }
 
 img.App-logo {
